[tool.poetry]
name = "ztfquery"
version = "1.27.1"
description = "Python package to access ZTF data"
authors = ["Mickael Rigault <m.rigault@ipnl.in2p3.fr>", "Simeon Reusch <simeon.reusch@desy.de>"]
maintainers = ["Mickael Rigault <m.rigault@ipnl.in2p3.fr>", "Simeon Reusch <simeon.reusch@desy.de>"]
license = "BSD-3-Clause"
repository = "https://github.com/mickaelrigault/ztfquery"
readme = "README.md"
classifiers = [
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
]
keywords = ["astrophysics", "science", "astronomy", "ZTF", "IPAC"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.7"
numpy = ">=1.24"
astropy = ">=5.2"
matplotlib = ">=3.7"
requests = ">=2.28"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2"
coveralls = ">=3.3"
cryptography = ">=39.0"
dask = ">=2023.3"
shapely = ">=2.0"

[tool.poetry.extras]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88