[metadata]
name = ztfquery
version = attr: ztfquery.__version__
description = Python package to access ZTF data
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mickael Rigault
author_email = m.rigault@ipnl.in2p3.fr
license = Apache Software License
license_files = LICENSE
url = https://github.com/MickaelRigault/ztfquery
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    importlib_resources; python_version < '3.10'  # not needed from 3.10

    # basic
    numpy
    pandas
    matplotlib
    requests>=2.28
    shapely>=2.0
    cryptography>=39.0
    dask>=2023.3
    
    # Astro
    astropy
    
    # internal
    ztffields>=0.4.3


[options.package_data]
ztfquery = data/*

[options.extras_require]
docs = nbsphinx
tests = pytest; coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
